<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:background="#16DAFD"
        android:onClick="onHelpBtnClick"
        android:text="@string/how_to_play"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPac" />

    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:background="#16DAFD"
        android:onClick="onAdminBtnClick"
        android:text="@string/admin_name"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

    <TextView
        android:id="@+id/textViewHomepage"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/homepage_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPac"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="#16DAFD"
        android:onClick="onPacBtnClick"
        android:text="@string/pac_name"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomepage" />

</androidx.constraintlayout.widget.ConstraintLayout>