<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PacMan.WordVerifActivity">

    <TextView
        android:id="@+id/textViewVerif"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/verif_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/wordInput"
        android:layout_width="337dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/base_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerif" />

    <Button
        android:id="@+id/btnVal"
        android:layout_width="120dp"
        android:layout_height="67dp"
        android:layout_marginTop="52dp"
        android:onClick="onBtnValClick"
        android:text="@string/val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInput" />
</androidx.constraintlayout.widget.ConstraintLayout>