<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminManager.AdminAddActivity">

    <TextView
        android:id="@+id/textViewAddPage"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/addpage_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addInput"
        android:layout_width="378dp"
        android:layout_height="96dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/base_hint"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPage" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="135dp"
        android:layout_height="68dp"
        android:layout_marginTop="60dp"
        android:onClick="onBtnAddClick"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInput" />
</androidx.constraintlayout.widget.ConstraintLayout>