<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminManager.AdminUpdateActivity">

    <TextView
        android:id="@+id/textViewUpdpage"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/updatepage_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewWordUpd"
        android:layout_width="372dp"
        android:layout_height="235dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdpage">

    </ListView>

    <Button
        android:id="@+id/btnUpd"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:onClick="onUpdBtnClick"
        android:text="@string/upd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updInput" />

    <EditText
        android:id="@+id/updInput"
        android:layout_width="311dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/base_hint"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewWordUpd" />
</androidx.constraintlayout.widget.ConstraintLayout>